--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,6 +3,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "dev": "npx nodemon index.js"
   },
   "dependencies": {
