--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
   "scripts": {
-    "update": "git clean -df && git checkout -- . && git pull && cd packages/app && npm run build && ../.. && pm2 reload BrawlmanceAPI && pm2 reload Brawlmanceweb"
+    "update": "git clean -df && git checkout -- . && git pull && cd packages/web && npm run build && cd ../.. && pm2 reload BrawlmanceAPI && pm2 reload BrawlmanceWeb"
   }
 }
