--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,7 +3,7 @@
   "main": ".eslintrc.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "NODE_ENV=production next build",
     "start": "next start --port 4400",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
