--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next",
     "build": "NODE_ENV=production next build",
-    "start": "next start --port 4400",
+    "start": "NODE_ENV=production next start --port 4400",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
