--- a/etc/nginx/brawlmance.conf
+++ b/etc/nginx/brawlmance.conf
@@ -10,11 +10,12 @@ server {
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
 
-    location /api {
-        proxy_pass http://localhost:4401;
-    }
     location / {
         proxy_pass http://localhost:4400;
+    }
+    location /api {
+        rewrite    /api/(.*$) /$1 break;
+        proxy_pass http://localhost:4401;
     }
 }
 
@@ -34,10 +35,11 @@ server {
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
 
-    location /api {
-        proxy_pass http://localhost:4401;
-    }
     location / {
         proxy_pass http://localhost:4400;
+    }
+    location /api {
+        rewrite    /api/(.*$) /$1 break;
+        proxy_pass http://localhost:4401;
     }
 }
